[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://instagram.fhyd3-1.fna.fbcdn.net/t51.2885-19/s150x150/18443539_1541224809252129_7987203255618764800_a.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
