--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am NAWAZUDDIN
+            Hi! I am NAWAZUDDIN<br/>
             ALHAMDULLIAH
         </div>
         <script type="text/javascript" src="/ui/main.js">
