[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
+            ALHAMDULLIAH <br/>
             Hi! I am NAWAZUDDIN<br/>
-            ALHAMDULLIAH
+            
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
